# reterminal-assistant

./: .gitignore  CLAUDE.md  PLAN.md
components/assistant/: CMakeLists.txt  Kconfig  idf_component.yml
components/assistant/include/: assistant.h
components/assistant/src/: assistant.c  assistant_audio.c  assistant_ui.c  assistant_wifi.c  assistant_ws.c
components/esp32_p4_re_terminal_d1001/src/: esp32_p4_re_terminal_d1001.c
desk-pet-d1001 /: CMakeLists.txt  index.html
desk-pet-d1001 /main/: CMakeLists.txt  main.c
examples/voice_assistant/: CMakeLists.txt  sdkconfig.defaults
examples/voice_assistant/main/: CMakeLists.txt  idf_component.yml  main.c
nuc_server/: server.py
